fix: Update z-index for consistent layering in styles

--- a/public/style.css
+++ b/public/style.css
@@ -2753,7 +2753,7 @@ main.acceuilBackoffice section.produits article table tr:last-child td:last-chil
   padding: 60px 10px;
   justify-content: center;
   max-width: 90vw;
-  z-index: 999;
+  z-index: 1067;
   transition: 0.3s;
   background-color: #e4e4e4;
 }
