--- a/views/styles/frontoffice/_styleAcceuilConnecte.scss
+++ b/views/styles/frontoffice/_styleAcceuilConnecte.scss
@@ -233,7 +233,7 @@
         padding: 60px 10px;
         justify-content: center;
         max-width: 90vw;
-        z-index: 999;
+        z-index: 1067;
         transition: 0.3s;
         background-color: $color-light-gray;
         
